--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@
 .AnswerButton {
   text-align: center;
 }
+.timer {
+  color: red;
+  font-weight: bold;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ 
+}
 .li {
   padding: 10px;
 }
@@ -20,7 +26,7 @@
 .correct_answers {
   text-align: left;
   padding: 30px;
-  color: red;
+  color: green;
   font-weight: bold;
   font-family:Georgia, 'Times New Roman', Times, serif;
 
